<resources>
    <string name="app_name">GreesSaviours</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="admin">Admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drive_name">Drive Name:</string>
    <string name="drive_date">Drive Date:</string>
    <string name="drive_location">Location:</string>
    <string name="assembly">Assembly Spot:</string>
    <string name="assembly_time">Assembly Time:</string>
    <string name="location">Location:</string>
    <string name="question_m">How many members you are attending ?</string>
    <string name="attending">Yes , I am Attending</string>
    <string name="getcar">Getting car Along with you ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newdrive">NEW DRIVE</string>
    <string name="getdetails">GET DETAILS</string>
</resources>
