<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/adminconstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forest">

        <ImageView
            android:id="@+id/gslogoadmin"
            android:layout_width="220dp"
            android:layout_height="110dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/whitelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonadminlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:alpha="0.55"
            android:background="@drawable/round_white_box"
            android:padding="15dp"
            android:paddingLeft="15dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adminpasswordbback" />

        <ImageView
            android:id="@+id/admintextback"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:alpha="0.2"
            android:src="@drawable/round_white_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gslogoadmin" />

        <ImageView
            android:id="@+id/adminpasswordbback"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:alpha="0.2"
            android:src="@drawable/round_white_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admintextback" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/admintextinput"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/admintextback"
            app:layout_constraintStart_toStartOf="@+id/admintextback"
            app:layout_constraintTop_toBottomOf="@+id/gslogoadmin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/adminedittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/fullWhite"
                android:drawableLeft="@drawable/adminwhite"
                android:drawablePadding="15dp"
                android:editable="true"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/admin"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/adminpasswordinput"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/fullWhite"
            app:layout_constraintEnd_toEndOf="@+id/admintextback"
            app:layout_constraintStart_toStartOf="@+id/admintextback"
            app:layout_constraintTop_toBottomOf="@+id/admintextback">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/adminedittextpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/fullWhite"
                android:drawableLeft="@drawable/baseline_lock_white_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>


    </android.support.constraint.ConstraintLayout>
</FrameLayout>